tests/macros/password/extension.stderr
error: option `extension` does not exist for kind `password`
 --> $DIR/extension.rs:2:48
  |
2 |     let q = inquisition::questions![password { extension: todo!() }];
  |                                                ^^^^^^^^^
