tests/macros/password/extension.rs
fn main() {
    let q = inquisition::questions![password { extension: todo!() }];
}
